#5 fix input overflow

--- a/src/components/v2/react/addons/HeaderMenu.css
+++ b/src/components/v2/react/addons/HeaderMenu.css
@@ -24,5 +24,5 @@
   /*background-color: #1b719f;*/
   color: lightgray;
   font-size: 14px;
-  padding: 3px;
+  padding: 5px;
 }
